# poly-tri

./: CMakeLists.txt  README.md  Untitled.ipynb  main.cpp  poly-tri.kdev4  poly_tri.cpp  poly_tri.h  poly_tri.kdev4  poly_tri.py  poly_tri_bindings.cpp  poly_tri_numba.py  poly_tri_py.py  setup.py
packaging/conda/: build.sh  meta.yaml
tests/: Untitled1.ipynb  easy_1.py  numba_tests.ipynb  speed.ipynb  speed_numba0-39.ipynb  speed_numba0-41.ipynb  speed_numba0.38.ipynb  test.py  test_cpp.py  test_numba.py  test_profile.py
